# GestureTrackingServer

./: .gitignore  CMakeLists.txt  README.md  client.cpp  kinectexample.cpp  server.cpp
GestureTracker/: CMakeLists.txt  GestureDetector.hpp
cmake/: functions.cmake  k4a.cmake  k4abt.cmake
examples/: CMakeLists.txt  simple-client.cpp  simple-server.cpp  tcp-client.cpp  tcp-server.cpp
